oraclecode/bengaluru/istio/temperature-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: temperature-svc
spec:
  hosts:
    - temperature-svc
  http:
    - route:
        - destination:
            host: temperature-svc.default.svc.cluster.local
            port:
              number: 80
