oraclecode/bengaluru/istio/weather-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weather-svc
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: weather-svc.default.svc.cluster.local
            port:
              number: 80
